# peoplebox

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  build.cmd  build.ps1  build.sh  build_cecgpu.sh  build_debug.sh  build_pi.sh  build_verbose.sh  build_vs2015.cmd  build_windows.sh  clean.sh  deploy_apps.sh  example.cmakevars  milk_frames.sh  run.ps1  run.sh  run_tiny.sh  run_track.ps1  run_track.sh
appconf/: darktrack.conf  darktrack.conf.jetson  save_frame.conf  save_frame.conf.raspi
config/: save_frame_jetson1.cfg  save_frame_jetson2.cfg  save_frame_jetson3.cfg  save_frame_jetson4.cfg  save_frame_jetson5.cfg  save_frame_jetsoncnaf.cfg  save_frame_raspi6.cfg  save_frame_raspi7.cfg  save_frame_raspi8.cfg  tracking_jetson1.cfg  tracking_jetson2.cfg  tracking_jetson3.cfg  tracking_jetson4.cfg  tracking_jetson5.cfg  tracking_jetsoncnaf.cfg
script/: cam_viewer.py  count_json.py  crowd.json  darknet_tracking.py  darktrack.py  fit_crowd.py  fit_track.py  gt_comparison.py  gt_scanner.py  gt_viewer.py  json_counter.py  node_run.sh  peoplebox-save-stream  resize.py  save_frames_from_video.py  save_stream_svc.py  scan_parameters.sh  service_config.json  track_coords_jet4.py  unpack_video.py  variable_dist2d.py  view_video.py  viewer.py  viewer_crowd.py
src/: almost_sort.hpp  barrier.hpp  common.c.in  common.h  config.cpp  config.h  darkboat.c.in  darkcar.c.in  darkcrowd.c  darkcrowd.c.in  darktest.c  darktest.c.in  darktrack.c  darktrack.c.in  darktrack.cpp.in  darktrack_utils.c  darktrack_utils.cpp  darktrack_utils.h  demo.cpp  doublecam.cpp  draw_debug_frame.hpp  dump_frame.cpp  dump_stream.cpp  grabber.hpp  hungarian.hpp  jetson1.cmakevars  json_triplet_packer.cpp  kalman.hpp  p_detector.hpp  peoplebox.cmakevars  peoplebox_params.h  peoplebox_params.h.in  save_frame.cpp  save_frame.cpp.in  save_stream.cpp  scan.cpp  support.h  test_empty.cpp  tracking.c  tracking.hpp
src/boxvars/: jetson1.cmakevars  jetson2.cmakevars  jetson3.cmakevars  jetson4.cmakevars  jetson5.cmakevars  jetsoncnaf.cmakevars  raspi6.cmakevars  raspi7.cmakevars  raspi8.cmakevars  track_on_video.cmakevars_test
